--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-ts-lib",
+  "name": "zod-xlsx",
   "version": "0.0.0",
   "license": "MIT",
   "author": "Sidwebworks",
@@ -23,6 +23,8 @@
     "build": "NODE_ENV=production tsup --dts-resolve",
     "dev": "NODE_ENV=development tsup --watch",
     "test": "vitest run",
+    "test:watch": "vitest",
+    "coverage": "vitest --coverage",
     "prepublishOnly": "pnpm run build",
     "prepare": "husky install"
   },
@@ -30,15 +32,22 @@
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
     "@types/node": "17.0.38",
+    "c8": "^7.11.3",
     "husky": "^7.0.0",
     "prettier": "2.5.1",
     "tsup": "6.0.1",
     "typescript": "4.7.3",
-    "vitest": "0.12.6"
+    "vitest": "0.12.6",
+    "xlsx": "^0.18.5",
+    "zod": "^3.17.3"
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "peerDependencies": {
+    "xlsx": "^0.18.5",
+    "zod": "^3.17.3"
   }
 }
