--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 22.x
 
       - name: Cache ~/.pnpm-store
         uses: actions/cache@v2
@@ -35,8 +35,8 @@ jobs:
             ${{ runner.os }}-${{ matrix.node-version }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-${{ matrix.node-version }}-build-
             ${{ runner.os }}-
-      - name: Install pnpm
-        run: npm i -g pnpm
+      - name: Enable corepack
+        run: corepack enable pnpm
 
       - name: Install deps
         run: pnpm i
