--- a/package.json
+++ b/package.json
@@ -45,5 +45,6 @@
   "peerDependencies": {
     "xlsx": "^0.18.5",
     "zod": "^3.17.3"
-  }
+  },
+  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
 }
