--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
   "devDependencies": {
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
-    "@types/node": "17.0.38",
+    "@types/node": "24.0.1",
     "c8": "^7.11.3",
     "husky": "^7.0.0",
     "prettier": "2.5.1",
     "tsup": "6.0.1",
-    "typescript": "4.7.3",
-    "vitest": "0.12.6"
+    "typescript": "5.8.3",
+    "vitest": "3.2.3",
+    "xlsx": "^0.18.5",
+    "zod": "^3.25.0"
   },
   "commitlint": {
     "extends": [
@@ -44,7 +46,7 @@
   },
   "peerDependencies": {
     "xlsx": "^0.18.5",
-    "zod": "^3.17.3"
+    "zod": "^3.25.0"
   },
-  "packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b"
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
